[gd_scene load_steps=13 format=2]

[ext_resource path="res://img/ButtonFrame.png" type="Texture" id=1]
[ext_resource path="res://audio/Denied.wav" type="AudioStream" id=2]
[ext_resource path="res://theme/Button.gd" type="Script" id=3]
[ext_resource path="res://audio/click.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/Accept.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFontData" id=6]
font_path = "res://theme/Pixel Lofi.otf"

[sub_resource type="DynamicFont" id=7]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 4
font_data = SubResource( 6 )

[node name="#Button" type="Button"]
modulate = Color( 0.545098, 0.545098, 0.545098, 1 )
anchor_right = 1.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
script = ExtResource( 3 )

[node name="AudioAccept" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AudioDenied" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 20.0

[node name="HC" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1

[node name="TR_Left" type="TextureRect" parent="HC"]
margin_left = 159.0
margin_right = 191.0
margin_bottom = 20.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 6

[node name="Label" type="Label" parent="HC"]
margin_left = 195.0
margin_top = 1.0
margin_right = 284.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 7 )
text = "Here is some text"

[node name="TR_Right" type="TextureRect" parent="HC"]
margin_left = 288.0
margin_right = 320.0
margin_bottom = 20.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 6
flip_h = true

[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Button_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_Button_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
